# Gaea

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Function.h  Gaea.cpp  Memory.cpp  Memory.h  README.md  Types.h
Core/: Function.h  Memory.cpp  Memory.h  Platform.h  SmartPointers.h  Types.h
Core/DataStructures/: String.cpp  String.h
DataStructures/: String.cpp
Logging/: Log.h
scripts/: build.ps1  build.sh  lint.ps1  lint.sh  static-analysis.ps1  static-analysis.sh
tests/: CMakeLists.txt
tests/Core/: Function_UnitTests.cpp
tests/Core/DataStructures/: StringTests.cpp
